# computational-intelligence-university

./: README.md
Projekt01/: README.md  zad1-AI.py  zad1.py  zad2.py
Projekt02/: README.md  zad1.py  zad2.py  zad3.py
Projekt03/: README.md  zad1.py  zad2.py  zad3.py
Projekt04/: README.md
Projekt05/: README.md  zad1.py  zad2.py  zad3.py
Projekt05/image_processing/: detections_img_0.1.json  detections_img_0.7.json
Projekt05/video_processing/: detections_vid_0.5.json  detections_vid_0.7.json
Projekt06/: README.md
Projekt06/zad1/: README.md
Projekt06/zad1/configs/: invalid_missing_model_name.yaml
Projekt06/zad1/ml-project-template/: .env.example  .pre-commit-config.yaml  pyproject.toml  text.txt
Projekt06/zad1/ml-project-template/configs/: iris_mlp_minmax.yaml  iris_mlp_zscore.yaml  iris_mlp_zscore_tuned.yaml
Projekt06/zad1/ml-project-template/src/cli/: predict.py  visualize.py
Projekt06/zad1/ml-project-template/src/models/: mlp.py  mlp_dropout.py
Projekt06/zad1/ml-project-template/src/utils/: __init__.py  config.py
Projekt06/zad1/ml-project-template/tests/: test_config.py
Projekt06/zad2/: README.md  README_CATS_DOGS.md  odp.md
Projekt07/: zad01.py  zad02.py  zad03.py
Projekt08/: zad01.py  zad02.py  zad03.py
lab1/: zad1-AI.py  zad1.py  zad2.py
lab2/: zad1.py  zad2.py  zad3.py
lab3/: zad1.py  zad2.py  zad3.py
lab5/: zad1.py  zad2.py  zad3.py
lab5/image_processing/: detections_img_0.3.json  detections_img_0.5.json
lab5/video_processing/: detections_vid_0.3.json
lab6/zad2/: .gitignore  Makefile  pyproject.toml  text.txt
(+51 files in other folders)
